fix: Fix the floating image3 that appears to be cut off

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,6 @@ body{
   font-weight: 400;
   line-height: 1.4;
   font-family: 'Nanum Gothic', sans-serif;
-  height: 6000px;
 }
 img{
   display: block;
@@ -557,8 +556,30 @@ header .badges .badge{
   top: 350px;
   left: 150px;
 }
-.youtube .floating3 {
+
+/* SEASON PRODUCT */
+.season-product{
+  background-image: url("../images/season_product_bg.jpg")
+}
+.season-product .inner{
+  height: 400px;
+}
+.season-product .floating3 {
   position: absolute;
-  bottom: -200px;
+  top: -200px;
   right: 0;
+}
+.season-product .text-group{
+  position: absolute;
+  top: 110px;
+  right: 100px;
+}
+.season-product .text-group .title{
+  margin-bottom: 10px;
+}
+.season-product .text-group .description{
+  margin-bottom: 15px;
+}
+.season-product .text-group .more{
+
 }
